Minor improvements for online maven resolution